@@ -1,0 +1,3 @@
+;;; ebuild-mode.el for backwards compatibility.
+(require 'gentoo-syntax)
+(provide 'ebuild-mode)
